# lade

./: Cargo.toml  LICENSE  README.md  setup-for-linux.sh  test.rhai  test_rhai
.github/workflows/: check.yml  linux.yml  macos.yml  rust.yml  test.yml  windows.yml
docs/: Contribution_ja.md
src/: check.rs  clean.rs  command.rs  consts.rs  dependencies.rs  download_file.rs  exe_name.rs  install.rs  install_from_git.rs  installed_structs.rs  macros.rs  main.rs  package.rs  package_list_structs.rs  package_toml_for_download.rs  paths.rs  remove.rs  rhai_lade.rs  search.rs  search_package.rs  unzip_file.rs  update.rs  upgrade_self.rs  urls.rs  version.rs
src/command/: #clean.rs#  .#clean.rs  check.rs  clean.rs  install.rs  list.rs  remove.rs  search.rs  update.rs  upgrade.rs
src/rhai_lade/: cross_platform.rs  envs.rs  execute.rs  files.rs  path.rs  structs.rs  system.rs
