[package]
name = "lade"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
dirs-next = "2.0.0"
git2 = "0.20.0"
indicatif = "0.17.9"
reqwest = { version = "0.12.12", features = ["blocking"] }
rhai = "1.21.0"
rustyline = "15.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
toml = "0.8.19"
zip = "2.2.2"
